--- a/connect4.html
+++ b/connect4.html
@@ -1,3 +1,4 @@
+<!--https://github.zhaw.ch/kueenden/4-Gewinnt-->
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,7 +6,6 @@
   <title>Vier gewinnt</title>
 
   <style>
-
     div {
       box-sizing: border-box;
     }
@@ -45,21 +45,30 @@
   let state = {
     board: [
       [ '', '', '', '', '', '', '' ],
-      [ '', 'r', '', '', '', '', '' ],
       [ '', '', '', '', '', '', '' ],
-      [ '', '', '', 'r', '', '', '' ],
       [ '', '', '', '', '', '', '' ],
-      [ '', 'b', '', '', '', '', '' ]
-    ]
+      [ '', '', '', '', '', '', '' ],
+      [ '', '', '', '', '', '', '' ],
+      [ '', '', '', '', '', '', '' ]
+    ],
+    color: "r"
   }
-  
+
+  function init() {
+    document.getElementById("newGame").addEventListener("click", newGame);
+    displayColor()
+    showBoard()
+  }
+
   function showBoard() {
     let board = document.getElementsByClassName("board")[0]
     board.innerHTML = ""
     for(let i = 0; i < 7 * 6; i++) {
+      let row = Math.floor(i / 7)
       let node = document.createElement("div")
       board.appendChild(node)
-      node.setAttribute("class", "field")
+      node.classList.add("field")
+      node.id = i
       let child = document.createElement("div")
       let value = state.board[Math.floor(i / 7)][i % 7]
       if(value == "r") {
@@ -68,35 +77,74 @@
         child.setAttribute("class", "blue piece")
       }
       node.appendChild(child)
+      addListeners()
     }
   }
 
-  function doRandomStuff() {
-      let randomOperation = Math.floor(Math.random() * 2)
-      let randomY = Math.floor(Math.random() * 6)
-      let randomX = Math.floor(Math.random() * 7)
-      let randomColor = Math.floor(Math.random() * 2) == 1 ? "b" : "r";
-      switch(randomOperation) {
-        case 0:
-          state.board[randomY][randomX] = randomColor
-          break;
-        case 1:
-          state.board[randomY][randomX] = ""
-          break;
-      }
-      showBoard()
+  function addListeners() {
+    let allFields = document.getElementsByClassName("field")
+    for(let i = 0; i < allFields.length; i++) {
+      allFields[i].addEventListener("click", clicked)
+    }
   }
 
-  setInterval(doRandomStuff, 100);
+  function clicked() {
+    let id = this.id
+    let column = id % 7
+    addIntoColumn(column)
+    showBoard()
+  }
+
+  function addIntoColumn(column) {
+    for(let i = state.board.length - 1; i >= 0; i--) {
+      if(state.board[i][column] == "") {
+        state.board[i][column] = state.color
+        switchColor()
+        break
+      }
+    }
+  }
+
+  function switchColor() {
+    if(state.color == "r") {
+      state.color = "b"
+    } else {
+      state.color = "r"
+    }
+    displayColor()
+  }
+
+  function displayColor() {
+    document.getElementById("currentColor").innerHTML = state.color == "r" ? "red" : "blue"
+  }
+
+  function newGame() {
+    state = {
+      board: [
+        [ '', '', '', '', '', '', '' ],
+        [ '', '', '', '', '', '', '' ],
+        [ '', '', '', '', '', '', '' ],
+        [ '', '', '', '', '', '', '' ],
+        [ '', '', '', '', '', '', '' ],
+        [ '', '', '', '', '', '', '' ]
+      ],
+      color: "r"
+    }
+    init()
+  }
 </script>
 
 </head>
 <body>
+  <div class="heading">
+    <button id="newGame">New Game</button><br>
+    <h2 style="display: inline;">Current color: </h2><h2 id="currentColor" style="display: inline;"></h2>
+  </div>
 
   <div class="board"></div>
 
   <script>
-    showBoard()
+    init()
   </script>
 
 </body>
