--- a/server/public/connect4.html
+++ b/server/public/connect4.html
@@ -50,6 +50,8 @@
     <button id="newGame">Neues Spiel</button><br>
     <button id="load">Laden</button>
     <button id="save">Speichern</button><br>
+    <button id="localLoad">Laden von Lokal</button>
+    <button id="localSave">Speichern auf Lokal</button><br>
     <h2 style="display: inline;">Farbe: </h2><h2 id="currentColor" style="display: inline;"></h2>
   </div>
 
