Added undo functionality

--- a/server/public/connect4.html
+++ b/server/public/connect4.html
@@ -47,7 +47,8 @@
 </head>
 <body>
   <div class="heading">
-    <button id="newGame">Neues Spiel</button><br>
+    <button id="newGame">Neues Spiel</button>
+    <button id="undo">Undo</button><br>
     <button id="load">Laden</button>
     <button id="save">Speichern</button><br>
     <button id="localLoad">Laden von Lokal</button>
