--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=./code/index.html" />
+<meta http-equiv="refresh" content="0; URL=./server/public/index.html" />
