--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1; URL=./server/public/index.html" />
+<meta http-equiv="refresh" content="0 URL=./server/public/connect4.html
