--- a/server/public/connect4.html
+++ b/server/public/connect4.html
@@ -53,7 +53,8 @@
     <button id="save">Speichern</button><br>
     <button id="localLoad">Laden von Lokal</button>
     <button id="localSave">Speichern auf Lokal</button><br>
-    <h2 style="display: inline;">Farbe: </h2><h2 id="currentColor" style="display: inline;"></h2>
+    <h2 style="display: inline;">Farbe: </h2><h2 id="currentColor" style="display: inline;"></h2><br>
+    <h2 style="display: inline;">Winner: </h2><h2 id="winner" style="display: inline;"></h2>
   </div>
 
   <div class="board"></div>
