--- a/server/public/connect4.html
+++ b/server/public/connect4.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="heading">
-    <h1>Vier gewinnt: <a href="../../4 Gewinnt.pdf">Doku</a></h1>
+    <h1>Vier gewinnt: <a href="../../4 Gewinnt.pdf" target="_blank">Doku</a></h1>
     <button id="newGame">Neues Spiel</button>
     <button id="undo">Undo</button><br>
     <button id="load">Laden</button>
